<resources>
    <string name="app_name">Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="my_catched_pokemon">My Catched Pokemon</string>
    <string name="catch_pokemon">Catch Pokemon</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="release">Release</string>
    <string name="detail">Detail</string>
    <string name="no_data">No data</string>
    <string name="you_don_t_have_pokemon">You don\'t Have Pokemon</string>
</resources>